--- a/res/xml/filter_nfc.xml
+++ b/res/xml/filter_nfc.xml
@@ -3,7 +3,7 @@
     <tech-list>
         <tech>android.nfc.tech.NfcA</tech>
     </tech-list>
-    <tech-list>
+<!--     <tech-list>
         <tech>android.nfc.tech.NfcB</tech>
     </tech-list>
     <tech-list>
@@ -11,11 +11,11 @@
     </tech-list>
     <tech-list>
         <tech>android.nfc.tech.NfcV</tech>
-    </tech-list>
+    </tech-list> -->
     <tech-list>
         <tech>android.nfc.tech.IsoDep</tech>
     </tech-list>
-    <tech-list>
+<!--     <tech-list>
         <tech>android.nfc.tech.MifareClassic</tech>
     </tech-list>
     <tech-list>
@@ -25,6 +25,6 @@
         <tech>android.nfc.tech.NdefFormatable</tech>
     </tech-list>
     <tech-list>
-        <tech>android.nfc.tech.Ndef</tech>
-    </tech-list>
+        <tech>android.nfc.tech.Ndef</tech> 
+    </tech-list>-->
 </resources>
